src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>KeyDuplicateEffectiveDate__c</fullName>
        <label>KeyDuplicateEffectiveDate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Approved_Date__c</fullName>
        <description>Actual Approval Date</description>
        <label>Last Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocalAddress__c</fullName>
        <formula>Contact.Address__r.Postal_Code__r.Name + &quot;, &quot; + 
Contact.Address__r.Block_House_Number__c + &quot;, &quot; + 
Contact.Address__r.Street_Name__c + &quot;, &quot; + 
Contact.Address__r.Building_Name__c + &quot;, &quot; + 
Contact.Address__r.Level_Number__c + &quot;, &quot; + 
Contact.Address__r.Unit_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LocalAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Package__c</fullName>
        <description>Custom field for Main Package.</description>
        <label>Main Package</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Application__c</fullName>
        <label>Mobile Application</label>
        <picklist>
            <picklistValues>
                <fullName>Zaobao Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Cases (New Address)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Order_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto-populated based from the details captured in Order form.</description>
        <label>New Order Details</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Cases (New Order Details)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Year_for_Year_To_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Next Year for Year To Date</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification_Sent_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Sent Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Asia1_Account__c</fullName>
        <label>Number of Asia1 Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Goodwill_in_3_months__c</fullName>
        <label>Number of Goodwill in 3 months</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Package_Product_Family__c</fullName>
        <label>Offer Package Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <label>Offer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Subscription Related</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Old_Batch_Number__c</fullName>
        <label>Old Batch Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <picklist>
            <controllingField>Platform__c</controllingField>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android + iOS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ops_Rep_ID__c</fullName>
        <description>Vendor Ops Rep user who handled the Complaint Case</description>
        <label>Ops Rep ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Cases (Order Number)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Owner__c</fullName>
        <label>Original Owner</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Retained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Retained</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overridden_Admin_Charges_Amount__c</fullName>
        <label>Overridden Admin Charges Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverseasAddress__c</fullName>
        <formula>Contact.Address__r.Country_Name__c + &quot;, &quot; +
 Contact.Address__r.Address_1__c  + &quot;, &quot; +
 Contact.Address__r.Address_2__c  + &quot;, &quot; +
 Contact.Address__r.Address_3__c  + &quot;, &quot; +
 Contact.Address__r.Address_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OverseasAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POP_Start_Date__c</fullName>
        <label>POP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paper_Fee__c</fullName>
        <label>Paper Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payee_Name__c</fullName>
        <description>Store the Payee Name to be printed on the checque when created a refund</description>
        <inlineHelpText>Payee Name to be printed on the Cheque</inlineHelpText>
        <label>Payee Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_ID__c</fullName>
        <label>Payment Method ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CreditCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eNets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paypal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Charge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Smartphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartphone + Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet + Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online + Smartphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartphone + Tablet + Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pub_Type__c</fullName>
        <label>Pub Type</label>
        <picklist>
            <picklistValues>
                <fullName>NP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MAG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Overriding__c</fullName>
        <label>Reason for Overriding</label>
        <length>3400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Terminating__c</fullName>
        <label>Reason for Terminating</label>
        <length>3400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recipient_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reclass_Approved_Rejected_By__c</fullName>
        <label>Reclass Approved / Rejected By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reclass_Code__c</fullName>
        <label>Reclass Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reclass_Date__c</fullName>
        <label>Reclass Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reclass_Status__c</fullName>
        <label>Reclass Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reclass_Sub_Category__c</fullName>
        <label>Reclass Sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>Non Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Start Temp-Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Stop TempStop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Inserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Torn / Wet Papers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Delivery Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Papers Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Delivery Notification&gt;3 days from Pub Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requests to Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Non Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Late Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Redemption Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User ID not created / activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force Logout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Flag not updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Crash/Slow Loading/System Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Dispute (Direct Sub)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Dispute (Vendor Sub)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of Receptacle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of Backdated Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Related Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Circulation Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Redemption Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Promo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reclass_Submitted_by__c</fullName>
        <label>Reclass Submitted by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reclassify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reclassify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejected_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Request_Date__c</fullName>
        <description>Created because included in criteria for renewal of subscription (outbound retention).</description>
        <label>Renewal Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replaced_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Mailing Agent</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Replaced_by_Courier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replaced by Courier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replaced_by_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replaced by Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replacement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Total_Credit__c</fullName>
        <label>Request Total Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Total_Issue__c</fullName>
        <label>Request Total Issue</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_for_Waiving_of_Admin_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Read-only field. Will be populated based from indicator on Order Form.</description>
        <label>Request for Waiving of Admin Charge?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Urgent_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Urgent Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restart_Date__c</fullName>
        <label>Restart Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retention_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retention Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Route_to_Retention_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Route to Retention 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Route_to_Retention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Route to Retention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Subscriptions_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected Subscriptions Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_Retention__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to route the Case to Retention Team</description>
        <label>Send to Retention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Auto_Response_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if email is already sent for the specific case record. Email alert as auto response rule.</description>
        <label>Sent Auto Response Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spam_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies if the case created from email is a spam.</description>
        <inlineHelpText>This field identifies if the case created from email is a spam.</inlineHelpText>
        <label>Spam Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Charging_Credit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Charging Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stop_Charging_Credit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Charging Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stop_Date__c</fullName>
        <label>Stop/Complaint Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Request_Complaint__c</fullName>
        <label>Stop Request/Complaint</label>
        <picklist>
            <picklistValues>
                <fullName>Stop Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Request_Date__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Waive_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Waive Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>App Crash / Slow Loading / Sys Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Dispute (Direct Sub)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Dispute (Vendor Sub)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual Sales (Buzz, Newsstand, Outlet)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change/Reset Password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Particulars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Subscription Packages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivate User Id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Redemption Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Redemption Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Late Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Non Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Inserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspapers - Gift Redemption Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Circulation Related Matters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Start (Temp-Stop)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Stop (Temp Stop)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of Backdated Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of Receptacle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requests to Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Flag Not Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Assess for Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Retention Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Redelivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reclassification Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reclassification Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Reclassification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to CSO Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to CSO to Initiate Courier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Mailing Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Ops Rep/Cir-Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Technical CSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Stop Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp Stop Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp Stop Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent Start Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent Start Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent Stop Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent Stop Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Goodwill Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Reclassification Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Urgent Start Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Urgent Stop Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Subscriber)</relationshipLabel>
        <relationshipName>Start_Subscriber</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <formula>Subscription_Name__r.Zuora__SubscriptionEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription History</label>
        <referenceTo>Subscription_History__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>